@@ -85,6 +85,10 @@ Trunk -  Unreleased
     HIVE-1108. Make QueryPlan serializable
     (Zheng Shao via namit)
 
+    HIVE-1093. Add a "skew join map join size" variable to control the
+    input size of skew join's following map join job
+    (He Yongqiang via namit)
+
 Release 0.5.0 -  Unreleased
 
   INCOMPATIBLE CHANGES
